--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 
-    <title>Car Game | shree vaishnav academy</title>
+    <title>Car Game | shree Vaishnav Academy Indore</title>
 <link rel="icon" href="icon.png">
     <link
       rel="stylesheet" 
