--- a/index.html
+++ b/index.html
@@ -203,6 +203,31 @@
       #controls > span:last-child > span {
         transform: rotate(90deg);
       }
+
+      /* Watermark overlay */
+      .watermark {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 9999;
+        pointer-events: none;
+      }
+      .watermark::before {
+        content: "Shree Vaishnav Academy";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(-25deg);
+        color: rgba(255, 255, 255, 0.06);
+        font-size: 90px;
+        font-weight: 900;
+        letter-spacing: 6px;
+        text-transform: uppercase;
+        white-space: nowrap;
+        text-shadow: 0 0 1px rgba(0,0,0,0.1);
+      }
     </style>
 
     <script>
@@ -217,6 +242,7 @@
   </head>
 
   <body translate="no">
+    <div class="watermark" aria-hidden="true"></div>
     <div id="game">
       <div id="road">
         <div id="cloud"></div>
