changes in index.html file

--- a/index.html
+++ b/index.html
@@ -228,6 +228,21 @@
         white-space: nowrap;
         text-shadow: 0 0 1px rgba(0,0,0,0.1);
       }
+
+      /* Bottom external link */
+      #sva-link {
+        text-align: center;
+        margin: 12px 0 24px;
+        font-size: 14px;
+        color: #9e95a8;
+      }
+      #sva-link a {
+        color: #25d8b1;
+        text-decoration: none;
+      }
+      #sva-link a:hover {
+        text-decoration: underline;
+      }
     </style>
 
     <script>
@@ -270,6 +285,7 @@
       <span><span>&lt;</span><span>&gt;</span>move</span>
       <span><span>&lt;</span><span>&gt;</span>accelerate</span>
     </div>
+    <p id="sva-link">This is my school — Visit Shree Vaishnav Academy: <a href="https://sva.ac.in/" target="_blank" rel="noopener noreferrer">https://sva.ac.in/</a></p>
     <script src="javascript/1.js"></script>
 
     <script id="rendered-js">
