--- a/index.html
+++ b/index.html
@@ -94,8 +94,27 @@
         margin: 0 auto;
         overflow: hidden;
         background: #222;
+        background-image: url('images/school-bg.png');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: contain;
         user-select: none;
         transition: opacity 10s;
+        border-radius: 24px; /* curved edges */
+        transform: perspective(1200px) rotateX(2deg); /* subtle screen curvature */
+      }
+      #game::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        pointer-events: none;
+        border-radius: inherit;
+        /* vignette + soft CRT feel */
+        box-shadow: inset 0 0 80px rgba(0,0,0,0.6);
+        background: radial-gradient(120% 100% at 50% 50%, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0.02) 35%, rgba(0,0,0,0.35) 100%);
       }
       #road {
         transition: opacity 2s;
@@ -590,9 +609,9 @@
 
       const highscores = [];
 
-      let width = window.innerWidth;
-      let height = window.innerHeight;
-      let halfWidth = width / 2;
+      const width = 1000; // medium size
+      const height = 600; // medium size
+      const halfWidth = width / 2;
       const roadW = 4000;
       const segL = 200;
       const camD = 0.2;
@@ -1010,10 +1029,6 @@
       }
 
       function updateSize() {
-        width = window.innerWidth;
-        height = window.innerHeight;
-        halfWidth = width / 2;
-
         game.style.width = width + "px";
         game.style.height = height + "px";
 
